<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.activities.MainActivity">

  <!-- Main content group -->
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/contentGroup"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:paddingHorizontal="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintWidth_max="488dp">

    <!-- Title -->
    <com.google.android.material.button.MaterialButton
      android:id="@+id/btnKits"
      style="@style/Widget.Material3.Button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/manage_kits"
      app:layout_constraintBottom_toTopOf="@+id/btnSearch"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btnSearch"
      style="@style/Widget.Material3.Button.OutlinedButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/search_supplies"
      app:layout_constraintBottom_toTopOf="@+id/btnReports"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnKits" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btnReports"
      style="@style/Widget.Material3.Button.OutlinedButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/reports"
      app:layout_constraintBottom_toTopOf="@+id/btnSettings"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnSearch" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btnSettings"
      style="@style/Widget.Material3.Button.OutlinedButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/settings"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnReports" />

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tvTitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/emergency_preparedness_manager"
      android:textAlignment="center"
      android:textAppearance="?attr/textAppearanceHeadlineMedium"
      app:layout_constraintBottom_toTopOf="@+id/tvSubtitle"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.5"
      app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tvSubtitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/build_kits_track_supplies_and_stay_ready"
      android:textAlignment="center"
      android:textAppearance="?attr/textAppearanceBodyLarge"
      app:layout_constraintBottom_toTopOf="@+id/btnKits"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>